# YahooFantasyAPI

./: .gitignore  pyproject.toml  requirements.txt
src/YahooFantasyAPI/: api.py  yfapi.py
src/YahooFantasyAPI/api_client/: api_client.py
src/YahooFantasyAPI/auth/: __init__.py  auth.py  token_manager.py
src/YahooFantasyAPI/collections/: team.py
src/YahooFantasyAPI/request/: __init__.py  request.py
src/yfsAPI/: __init__.py  utils.py  yfapi.py  yfsapi.py
src/yfsAPI/api_client/: __init__.py  api_client.py
src/yfsAPI/auth/: __init__.py  token.py  token_manager.py
src/yfsAPI/collections/: team.py
tests/: test_auth.py  test_requests.py  test_yfapi.py  test_yfsapi.py
