[project]
name = "yfsAPI"
version = "0.0.1"
authors = [
	{name="King Steeze", email="kingsteeze@proton.me"},
]
description = "A package that can be used to easily interface with the Yahoo Fantasy Sports API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx==0.27.2",
    "xmltodict==0.13.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
